platform/projects/llunde/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llunde
  labels:
    infra.fredrir.com/tier: project
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
