platform/projects/llunde/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      automountServiceAccountToken: false
      dnsConfig:
        options: [{name: ndots, value: "2"}]
      nodeSelector:
        kubernetes.io/hostname: fredrir-09
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: postgres
        image: docker.io/library/postgres@sha256:af194ccf3e2d7fe367012c7b88ce8b816c5c889b18a5b316799a1f0d7eac746a
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - name: postgres
          containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 192Mi
          limits:
            cpu: '2'
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: shm
          mountPath: /dev/shm
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - llunde
            - -d
            - llunde
          periodSeconds: 5
        startupProbe:
          exec:
            command:
            - pg_isready
            - -U
            - llunde
            - -d
            - llunde
          failureThreshold: 30
          periodSeconds: 5
      volumes:
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 128Mi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-retain
      resources:
        requests:
          storage: 10Gi
